# Megatron-mixtera

./: .gitignore  README.md  convert.py  convert_huggingface_to_megatron.py  convert_megatron_to_huggingface.py  convert_megatron_to_huggingface_decoder.py  draw_accuracy.py  draw_accuracy_1B.py  draw_ado.py  draw_throughput.py  draw_throughput_full.py  draw_two_accuracy.py  eval_lmeval.py  evaluate_gpt.py  gpt_builders.py  pretrain_gpt.py
examples/gpt3/: convert.sbatch  convert_ckpt.sbatch  convert_eval.sbatch  eval_all_tasks.sbatch  evaluate.sbatch  gpt_config.yaml  pretrain.sbatch  pretrain_default_gpt.sbatch  submit.py  torch_decoder_eval.sbatch  train_gpt3_175b_distributed.sh
megatron/core/: optimizer_param_scheduler.py  utils.py
megatron/core/distributed/: torch_fully_sharded_data_parallel.py
megatron/training/: arguments.py  checkpointing.py  training.py  utils.py
mixtera/: CMakeLists.txt
mixtera/cli/: cli.py  mixtera-cli
mixtera/core/: CMakeLists.txt
mixtera/core/query/chunker/: CMakeLists.txt  __init__.py
mixtera/core/query/chunker/include/: chunker.hpp
mixtera/core/query/chunker/src/: chunker.cpp
mixtera/hf/: __init__.py  mixtera_hf_dataset.py
mixtera/network/: __init__.py  network_utils.py  server_task.py
mixtera/torch/: __init__.py  mixtera_torch_dataset.py
mixtera/utils/: __init__.py  checkpoint.py  dataset_utils.py  feedback.py  prefetch_iterator.py  tokenizing_iterator.py  utils.py  webdataset_utils.py
tools/checkpoint/: convert.py  loader_base.py  loader_core.py  loader_legacy.py  saver_hf_llava.py  saver_legacy.py
(+98 files in other folders)
